--- a/projeto_tcc/src/main/webapp/style/style.css
+++ b/projeto_tcc/src/main/webapp/style/style.css
@@ -45,3 +45,17 @@
 	width: 100%;
 	margin-bottom: 10px;
 }
+
+.barra-menu{
+	background: #00cdcf !important;
+}
+
+.item-menu{
+	color: #ffffff !important;
+}
+
+.nome-usuario{
+	color: #ffffff !important;
+}
+
+
